# smart-auth

./: .gitignore  MANUS_INSTRUCTIONS.md  README.md  docker-compose.yml  package-lock.json
07_SystemDesign/: 🏗️ Complete Smart Village Management System - Project Structure.md  📋 Smart Village Management System -Design.md
07_SystemDesign/Accounting/: Integration Analysis - Village Accounting ERP System (1).md  Smart Village Management System - Project Status Report.md  Village Accounting ERP System - Database Design.md  Village Accounting ERP System - Progress Report.md  accounting_models (1).py  accounting_schemas (1).py
07_SystemDesign/Architicature/: system_architecture_updated.mmd
backend/: check_db.py  create_users.py  pyproject.toml
backend/src/: database.py  main.py
backend/src/api/: auth.py
backend/src/auth/: auth.py
backend/src/models/: user.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App-test.tsx  App.css  App.tsx  index.css
frontend/src/components/: ChangePassword.tsx  Dashboard.tsx  EditProfile.tsx  Login.tsx  Profile.tsx  UserManagement.tsx  UserMenu-fixed.tsx  UserMenu-old.tsx  UserMenu.tsx
frontend/src/styles/: dashboard-clean.css  dashboard.css
